fixed nav bar issues. TODO: Fix logo on mobile!

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto&display=swap');
 
+
 body {
     font-family: roboto;
     margin: 0;
@@ -16,68 +17,71 @@ p {
     justify-self: center;
     align-self: center;
 }
+@media (min-width: 701px) {
+    header {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        background-color: white;
+    }
 
-header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    background-color: white;
+    #logo {
+        grid-column: 1/3;
+        grid-row: 1;
+    }
+
+    nav {
+        grid-row: 1;
+        grid-column: 3/5;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        color: white;
+        margin-top: 100px;
+        background-color: #2660A4;
+    }
+
+    nav a {
+        text-decoration: none;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+
+    #home {
+        grid-column: 2;
+        text-align: right;
+        color: white;
+    }
+
+    .article {
+        margin-left: 125px;
+        margin-right: 125px;
+    }
+
+    #articles {
+        grid-column: 3;
+        color: white;
+        text-align: center;
+    }
+
+    #contact-us {
+        grid-column: 4;
+        color: white;
+        text-align: left;
+    }
+
+    #table-of-contents {
+        grid-column: 5;
+        color: white;
+        text-align: left;
+    }
+
+    #home:hover, #articles:hover, #contact-us:hover {
+        color: black;
+    }
 }
 
-#logo {
-    grid-column: 1/3;
-    grid-row: 1;
-}
-
-nav {
-    grid-row: 1;
-    grid-column: 3/5;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    color: white;
-    margin-top: 100px;
-    background-color: #2660A4;
-}
-
-nav a {
-    text-decoration: none;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-#home {
-    grid-column: 2;
-    text-align: right;
-    color: white;
-}
-
-.article {
-    margin-left: 125px;
-    margin-right: 125px;
-}
-
-#articles {
-    grid-column: 3;
-    color: white;
-    text-align: center;
-}
-
-#contact-us {
-    grid-column: 4;
-    color: white;
-    text-align: left;
-}
-
-#table-of-contents {
-    grid-column: 5;
-    color: white;
-    text-align: left;
-}
-
-#home:hover, #articles:hover, #contact-us:hover {
-    color: black;
-}
 
 body img {
     display: block;
@@ -106,8 +110,6 @@ footer {
     padding-top: 50px;
 }
 
-footer #contact-section {
-}
 
 /* Mobile Styles */
 @media (max-width: 700px) {
@@ -123,17 +125,31 @@ footer #contact-section {
         width: 80px;
     }
 
-    nav {
-        grid-column: 1;
-        grid-row: 2;
-        grid-template-columns: 1fr;
-        margin-top: 0;
-        background-color: #2660A4;
-    }
-
-    nav a {
-        padding: 10px 0;
-        text-align: center;
+    @media (max-width: 700px) {
+        nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #2660A4;
+            padding: 10px 0;
+        }
+    
+        nav a {
+            padding: 10px 20px;
+            text-align: center;
+            color: white;
+            text-decoration: none;
+            width: 100%;
+            border-bottom: 1px solid #fff;
+        }
+    
+        nav a:last-child {
+            border-bottom: none;
+        }
+    
+        nav a:hover {
+            background-color: #1e4a7a;
+        }
     }
 
     .article {
